# XiAgent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  deploy-prod.sh  pyproject.toml  restart-prod.sh  start-dev.bat  start-prod.sh  stop-dev.bat  stop-prod.sh
.sisyphus/evidence/: f3-grep-no-gemini-residue.txt  f3-load-model-config.txt  f3-node-registry-providers.txt  f3-openai-compatible-config.txt  f3-test-gemini-vision.txt  (+3 more)
docs/: README.md
tests/: conftest.py  test_api_logging.py  test_api_smoke.py  test_api_ui_controls.py  test_asset_catalog_workflow.py  test_asset_draft_node.py  test_asset_identity.py  test_asset_storyboard_orchestration.py  test_asset_upload_metadata_node.py  test_assets_service.py  test_chat_message.py  test_core_contracts.py  test_database_migrations.py  test_deepseek_node.py  test_dev_start_scripts.py  test_gemini_provider.py  test_gemini_vision_node.py  test_image_references.py  test_langgraph_adapter.py  test_manual_workflow_logging.py  test_model_config.py  test_model_router.py  test_node_input_resolver.py  test_node_registry.py  test_object_storage.py  test_parallel_deepseek_structured_json.py  test_resolve_segment_image_refs.py  test_run_deepseek_echo_bat.py  test_runninghub_nodes.py  test_runninghub_workflow.py  test_runninghub_workflows.py  test_runtime_event_stream.py  test_runtime_service.py  test_runtime_user_input.py  test_segment_storyboard_nodes.py  test_storyboard_nodes.py  test_storyboard_review_refine_node.py  test_storyboard_workflow.py  test_ui_control_catalog.py  test_users_service.py  (+7 more)
workflows/: AGENTS.md
(+283 files in other folders)
